# slambook2

ch10/: CMakeLists.txt  pose_graph_g2o_lie_algebra_custom.cpp
ch11/: CMakeLists.txt  loop_closure.cpp  loop_closure_custom.cpp
ch12/: CMakeLists.txt
ch12/dense_mono/: CMakeLists.txt  cuda_wrapper.cpp  cuda_wrapper.h  dense_mapping.cpp  dense_mapping_custom.cpp  dense_mapping_custom_cuda.cpp  dense_mapping_custom_multithread.cpp  kernels.cu  kernels.cuh  plot.cpp
ch12/dense_mono/cuda_example/: CMakeLists.txt  main.cu
ch3/useGeometry/: eigenGeometry.cpp
ch4/: useSophus.cpp
ch4/example/: CMakeLists.txt
ch6/: CMakeLists.txt
ch7/: CMakeLists.txt  pose_estimation_3d2d_ceres_quat.cpp  pose_estimation_3d2d_ceres_sophus.cpp  pose_estimation_3d2d_g2o.cpp  pose_estimation_3d2d_gauss_newton.cpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d_icp.cpp  pose_estimation_3d3d_icp_ceres.cpp  test_quat.py
ch8/: CMakeLists.txt  direct_method.cpp  direct_method_ceres copy.cpp  direct_method_ceres.cpp  direct_method_gn.cpp  optical_flow.cpp  optical_flow_lk.cpp
ch9/: CMakeLists.txt  bundle_adjustment_ceres_custom.cpp  bundle_adjustment_g2o_custom_analytical.cpp  bundle_adjustment_g2o_custom_autodiff.cpp
